crates/component-shape-gpui/tests/ui/manual_compatibility_impl.stderr
error: `component_shape!` does not accept manual `GpuiComponentShapeFor` impls inside the macro block; use `value = ...`, `values(...)`, or `compatibility<Value> where ...;` metadata
  --> tests/ui/manual_compatibility_impl.rs:10:14
   |
10 |         impl GpuiComponentShapeFor<String> for ManualCompatibilityShape {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `GpuiComponentShapeFor`
 --> tests/ui/manual_compatibility_impl.rs:1:28
  |
1 | use component_shape_gpui::{GpuiComponentShapeFor, component_shape};
  |                            ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
